# Island-Development-Game

./: CMakeLists.txt  README.md  comandos.txt  ficheiroConfig.txt  main.cpp
cpp/: Edificio.cpp  Trabalhador.cpp  Zona.cpp  engine.cpp  ilha.cpp  interface.cpp  utils.cpp
headers/: Edificio.h  Trabalhador.h  Zona.h  engine.h  ilha.h  interface.h  utils.h
